style.css
html{
    font-family: 'Courier New', Courier, monospace;
    -webkit-user-select: none; 
    -moz-user-select: none;    
    -ms-user-select: none; 
    user-select: none;
}

h1{
    text-align: center;
}

.main{
    display: block;
}

.center{
    width: fit-content;
    margin: auto;
}

.right{
    margin: 25px 0 0 25px;
}

@media (min-width: 805px) {
    .main{
        display: flex;
        flex-direction: row;
        justify-content: center;
    }
    
    .left, .right{
        width: 20vw;
        margin: 0;
    }

    .center{
        margin: 0;
    }

    .right{
        margin-left: 20px;
    }
}

table, td, th{
    border: 1px solid black;
    border-collapse: collapse;
    cursor: pointer;
}

td{
    height: 18px;
    width: 18px;
    padding: 3px;
    background-size: 14px;
    background-repeat: no-repeat;
    background-position: center;
    text-align: center;
}

td.bomb{
    background-image: url(./images/bomb.svg);
    background-color: #ddd;
}

td.flag{
    background-image: url(./images/flag.png);
}

td.cross{
    background-image: url(./images/cross.svg);
}

td.zero, td.one, td.two, td.three, td.four, td.five, td.six, td.seven, td.eight{
    background-color: #ddd;
    font-weight: 700;
}

td.one{
    color: #00f;
}

td.two{
    color: #080;
}

td.three{
    color: #f00;
}

td.four{
    color: #008;
}

td.five{
    color: #800;
}

td.six{
    color: #088;
}

td.seven{
    color: #000;
}

td.eight{
    color: #777;
}

.right p:nth-of-type(1){
    margin-top: 0;
}

.right p:nth-of-type(3){
    margin-bottom: 5px;
}

input[type="button"], input[type="text"]{
    font-family: inherit;
    border: 1px solid #444;
    border-radius: 5px;
    background-color: #eee;
    padding: 5px 10px;
    color: #000;
}

input[type="button"]:hover{
    background-color: #ddd;
    border-color: #333;
}

input[type="text"]{
    background-color: #f9f9f9;
}

.right input[type="button"]{
    padding: 5px 20px;
}

input[type="radio"]{
    accent-color: #444;
}

.modal{
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: #0003;
    overflow: auto;
}

.close{
    float: right;
    width: 28px;
    filter: brightness(5); 
}

.close:hover{
    filter: brightness(0);
}

#rules, .game-over, .game-win, #leaderboard{
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    margin: 5%;
    padding: 5px 10px 5px 20px;
    border: 1px solid #444;
    border-radius: 5px;
    background-color: white;
    box-shadow: 2px 2px 10px #444;
}

.game-over, .game-win{
    margin: 15%;
    padding: 15px 20px 20px 30px;
}

@media (min-width: 500px) {
    .game-over, .game-win{
        margin: 15%;
    }
}

@media (min-width: 900px) {
    .game-over, .game-win{
        margin: 15% 25%;
    }

    #rules{
        margin: 5% 15%;
    }
}

.username-entry{
    margin: 35px 0;
}

.flex-container{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    gap: 10px;
    margin: 20px 0;
}

@media (min-width: 600px) {
    .flex-container{
        flex-direction: row;
    }
}

#rules p{
    margin-right: 20px;
    line-height: 1.2;
}

#rules h3, #rules h4{
    margin-bottom: 10px;
}

#leaderboard{
    padding: 10px 10px 35px 40px;
    margin: 5%;
}

@media (min-width: 700px) {
    #leaderboard{
        margin: 5% auto;
        max-width: 550px;
    }
}

#leaderboard p{
    font-size: 20px;
    margin: 25px 0;
}

#leaderboard th, #leaderboard td{
    padding: 10px;
}

